Fix bug: main-tablist is hidden under banner

--- a/webroot/static/styles/views/header.css
+++ b/webroot/static/styles/views/header.css
@@ -261,3 +261,56 @@
   font-size: 1.25rem;
 }
 
+#main-tablist {
+  position: absolute;
+  right: 12rem;
+  left: 44.6rem;
+  z-index: 200;
+  height: 4rem;
+}
+
+[data-device|="mobile"]:root #main-tablist {
+  display: none;
+}
+
+#main-tablist [role="tab"] {
+  border-color: var(--region-header-border-color);
+  color: var(--secondary-application-header-foreground-color);
+  background-color: var(--application-header-background-color);
+  transition: all .2s;
+}
+
+#main-tablist [role="tab"][aria-selected="true"] {
+  color: var(--region-header-foreground-color);
+  background-color: var(--region-header-background-color);
+}
+
+#main-tablist [role="tab"][aria-selected="false"]:hover {
+  color: var(--region-header-foreground-color);
+  background-color: var(--secondary-region-header-background-color);
+}
+
+#main-tablist [role="tab"] .close {
+  background-color: transparent;
+  opacity: 0;
+  transition: all .2s;
+}
+
+#main-tablist [role="tab"] .close::after {
+  display: block;
+  width: 100%;
+  height: 100%;
+  color: var(--region-header-foreground-color);
+  font-family: FontAwesome;
+  line-height: 1.6rem;
+  text-align: center;
+  content: "\F00D";
+}
+
+#main-tablist [role="tab"]:hover .close {
+  opacity: 1;
+}
+
+#main-tablist [role="tab"] .close:hover {
+  background-color: var(--application-header-background-color);
+}
