--- a/webroot/static/styles/views/main.css
+++ b/webroot/static/styles/views/main.css
@@ -9,58 +9,12 @@ main {
   width: 100%;
 }
 
-#main-tablist {
-  position: absolute;
-  right: 12rem;
-  left: 44.6rem;
-  z-index: 200;
-  height: 4rem;
+[data-device="desktop"]:root main {
+  top: 4rem;
 }
 
-[data-device|="mobile"]:root #main-tablist {
-  display: none;
-}
-
-#main-tablist [role="tab"] {
-  border-color: var(--region-header-border-color);
-  color: var(--secondary-application-header-foreground-color);
-  background-color: var(--application-header-background-color);
-  transition: all .2s;
-}
-
-#main-tablist [role="tab"][aria-selected="true"] {
-  color: var(--region-header-foreground-color);
-  background-color: var(--region-header-background-color);
-}
-
-#main-tablist [role="tab"][aria-selected="false"]:hover {
-  color: var(--region-header-foreground-color);
-  background-color: var(--secondary-region-header-background-color);
-}
-
-#main-tablist [role="tab"] .close {
-  background-color: transparent;
-  opacity: 0;
-  transition: all .2s;
-}
-
-#main-tablist [role="tab"] .close::after {
-  display: block;
-  width: 100%;
-  height: 100%;
-  color: var(--region-header-foreground-color);
-  font-family: FontAwesome;
-  line-height: 1.6rem;
-  text-align: center;
-  content: "\F00D";
-}
-
-#main-tablist [role="tab"]:hover .close {
-  opacity: 1;
-}
-
-#main-tablist [role="tab"] .close:hover {
-  background-color: var(--application-header-background-color);
+[data-device|="mobile"]:root main {
+  top: 0;
 }
 
 #tab-home:only-child,
@@ -70,17 +24,10 @@ main {
 
 #main-tabpanels {
   position: absolute;
+  top: 0;
   bottom: 0;
   width: 100%;
   background-color: var(--region-background-color);
-}
-
-[data-device="desktop"]:root #main-tabpanels {
-  top: 4rem;
-}
-
-[data-device|="mobile"]:root #main-tabpanels {
-  top: 0;
 }
 
 [data-device|="mobile"]:root #main-tabpanels > [role="tabpanel"] {
